[package]
name = "mprober-lib"
version = "0.1.7"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/m-prober-lib"
homepage = "https://magiclen.org/m-prober-lib"
keywords = ["linux", "probe", "proc"]
categories = ["os::unix-apis"]
description = "A library aims to quickly collect Linux system information including hostname, kernel version, uptime, RTC time, load average, CPU, memory, network interfaces, block devices and processes."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "benches/bench.rs"]

[dependencies]
libc = "0.2.71"
scanner-rust = "2.0.8"
chrono = "0.4.11"
regex = "1"

page_size = "0.4.2"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "bench"
harness = false